--- a/Taro_3.x/package.json
+++ b/Taro_3.x/package.json
@@ -48,8 +48,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "taro-ui": "^2.3.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
